# RADIUS

./: LICENSE  README.md  download-dependencies.sh  index.html  install.m  split.m
FRS_generation/: Highway_FRS2CUDA.m  README.md  combine_zono.m  deleteAligned_noslice.m  pre_process_FRS.m  pre_process_zono.m
FRS_generation/left_turning/: LeftTurn_FRS2CUDA.m  compute_FRS_turning.m  dyn_turn_1_lo2hi.m  dyn_turn_1hi.m  dyn_turn_1lo.m  dyn_turn_2.m  dyn_turn_3.m  dyn_turn_4.m  dyn_turn_5.m  veh_dyn_gen_turning.m
Full_Size_Vehicle_Simulation/: .gitignore  Dockerfile  README.md  build-docker.sh  run-docker.sh
Full_Size_Vehicle_Simulation/simulator/: .gitignore  README.md  activate-matlab.sh  build-cpp-opt.sh  clean-cpp-opt.sh  fully_preprocess_frs.m  ninja-cpp-opt.sh  run-matlab.sh  scenario-2-1_initial_condition.mat  sign_pos_neg.m  simple_highway_HLP.m  zonotope_slice.m
Full_Size_Vehicle_Simulation/simulator/cpp-opt/: .clang-format  .gitignore  startup.m
Full_Size_Vehicle_Simulation/simulator/cpp-opt/src/rover_control_msgs/: CMakeLists.txt  package.xml
Full_Size_Vehicle_Simulation/simulator/cpp-opt/src/rover_control_msgs/msg/: GenParamInfo.msg  MatlabPlotInfo.msg  OnlineDebugMsg.msg  RoverDebugStateStamped.msg  RoverUvrStamped.msg  ZonoCenters.msg
Full_Size_Vehicle_Simulation/simulator/cpp-opt/src/rover_controller/: CMakeLists.txt  package.xml
Full_Size_Vehicle_Simulation/simulator/cpp-opt/src/rover_controller/cuda_include/: cuda_interval_lib.hpp  cuda_interval_rounded_arith.hpp
Full_Size_Vehicle_Simulation/simulator/cpp-opt/src/rover_controller/cuda_src/: pre_slice.cu  prob_integ.cu
Full_Size_Vehicle_Simulation/simulator/cpp-opt/src/rover_controller/docs/: CMakeLists.txt  Doxyfile
Full_Size_Vehicle_Simulation/simulator/cpp-opt/src/rover_controller/include/: common.hpp  comparison_methods.hpp  cuda_info.hpp  dyn_obs.hpp  fl_zono_constraint.hpp  fl_zono_obs_plot.hpp  fl_zono_obs_set.hpp  frs_io.hpp  frs_loader.hpp  frs_mega.hpp  frs_select_info.hpp  frs_text_loader.hpp  frs_total.hpp  fwd_decls.hpp  gencon.hpp  individual_mu_sigma.hpp  ipopt_string_utils.hpp  manu_type.hpp  monte_carlo_27_ipopt.hpp  monte_carlo_ipopt.hpp  mu_sigma_multi.hpp  plot_interface.hpp  point_xy.hpp  point_xyh.hpp  pre_slice.hpp  prob_integ.hpp  prob_integ_io.hpp  process_utils.hpp  risk_constraint.hpp  risk_cost.hpp  risk_pdf.hpp  risk_problem_description.hpp  risk_rtd.hpp  risk_rtd_ipopt_problem.hpp  rover_state.hpp  simple_util.hpp  timing_util.hpp  triangle_gen.hpp  unit_conversion.hpp  vehrs.hpp  (+3 more)
Full_Size_Vehicle_Simulation/simulator/cpp-opt/src/rover_controller/mex/: matlab_process_frses.cc  plot_mex.cc  pre_slice_mex.cc  prob_integ_mex.cc  risk_rtd_mex.cc
Full_Size_Vehicle_Simulation/simulator/cpp-opt/src/rover_controller/plotting/: plot_interface_matlab_impl.cc  plot_interface_matlab_impl_old.cc  plot_interface_matplot_impl.cc
Full_Size_Vehicle_Simulation/simulator/cpp-opt/src/rover_controller/ros_exec/: risk_rtd_ros.cc
Full_Size_Vehicle_Simulation/simulator/cpp-opt/src/rover_controller/src/: cuda_info.cc  dyn_obs.cc  fl_zono_constraint.cc  fl_zono_obs_set.cc  frs_io.cc  frs_loader.cc  frs_mega.cc  frs_text_loader.cc  frs_total.cc  gencon.cc  individual_mu_sigma.cc  manu_type.cc  monte_carlo_27_ipopt.cc  monte_carlo_ipopt.cc  mu_sigma_multi.cc  risk_constraint.cc  risk_cost.cc  risk_rtd.cc  risk_rtd_ipopt_problem.cc  rover_state.cc  simple_util.cc  vehrs.cc  waypoint_cost.cc
Full_Size_Vehicle_Simulation/simulator/cpp-opt/src/rover_controller/test/: comparison_methods_test.cc  cuda_prob_test.cc  dyn_obs_test.cc  fl_zono_constraint_test.cc  frs_io_test.cc  gencon_test.cc  individual_mu_sigma_test.cc  process_utils_test.cc  risk_rtd_ipopt_test.cc  triangle_gen_test.cc  vehrs_plot_test.cc  waypoint_cost_test.cc
Full_Size_Vehicle_Simulation/simulator/online/: RADIUS_simulation_main.m  agentHelper.m  crossroads_world.m  dyn_obs_to_mu_sigma_struct.m  dyn_obs_to_mu_sigmas.m  dynamic_car_world.m  get_waypoint_from_path_var_lookahead.m  get_world_bounds_as_dyn_obs.m  highway_HLP.m  highway_cost_fun.m  highway_sampling_opt.m  min_dist_between_ego_and_dyn_obs.m  obs_pdf.m  rlsimulator.m  rlsimulator_crossroads.m  rough_manu_cost_estimate.m  zonotope_slice_cost_fun.m
Full_Size_Vehicle_Simulation/simulator/online/fmincon_files/: highway_fmincon_cost_fun.m
util/: ROTxy.m  RTD_agent_2D.m  agent.m  gaussian_T_parameterized_traj_with_brake.m  highway_cruising_10_state_agent.m  my_const.mat  mycolormap2.mat  parametrized_turnning_with_brake.m  plot2DGaussianBlurs.m  plot_template.mat  plot_vehicle.m  sin_one_hump_parameterized_traj_with_brake.m
util/Prob_integration/: RADIUS_AgentHelper_Highway.m  RADIUS_AgentHelper_LeftTurn.m  RiskAgentHelper_crossroads.m  find_inzono_patch.m  polytope_PH.m  world_to_local_mirror_pdf.m
